# iadcm

./: .gitignore  CMakeLists.txt
core/: main.cpp  mainwindow.cpp  resources.qrc
core/battery/: batteryinfo.cpp  batteryinfo.h
core/lib/: mainwindow.h
